FREEMARKER-218 - Add jakarta.servlet support